<resources>
    <string name="app_name">MobileExam</string>

    <string name="label_toolbar_title">Delivery Details</string>
    <string name="label_add_to_cart">Add to Cart</string>
    <string name="label_view_cart">View Cart</string>
    <string name="label_total">Total Amount: </string>
    <string name="label_separator"> at </string>
    <string name="label_product_name">Product Name</string>
    <string name="label_product_price">Product Price</string>
    <string name="label_product_description">Details: \nLorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
    \nLorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum

    \nLorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsu

    \nLorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
     Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum\</string>

    <string name="btn_view_cart">View Cart</string>
    <string name="btn_buy">Buy Items</string>

</resources>
